--- a/CGVModClient/CGVModClient.csproj
+++ b/CGVModClient/CGVModClient.csproj
@@ -71,6 +71,9 @@
 	  <MauiXaml Update="Pages\GiveawayEventListPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\MainPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
